--- a/assets/scss/foundation/_base.scss
+++ b/assets/scss/foundation/_base.scss
@@ -9,6 +9,9 @@ body {
     line-height: 1.5;
     font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
     color: #333;
+    margin: 0;
+    padding: 0;
+    position: relative;
 }
 
 a {
