--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -407,6 +407,9 @@ body {
   line-height: 1.5;
   font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
   color: #333;
+  margin: 0;
+  padding: 0;
+  position: relative;
 }
 
 a {
@@ -440,4 +443,47 @@ button {
   border: none;
   color: inherit;
   cursor: pointer;
+}
+
+.l-footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 20px;
+}
+.l-footer .l-footer__inner {
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid #333;
+  padding-top: 20px;
+}
+.l-footer .l-footer__copy-text {
+  font-size: 14px;
+}
+
+.l-header {
+  position: fixed;
+  width: 100%;
+}
+.l-header .l-header__inner {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 24px;
+  padding-left: 24px;
+}
+.l-header .l-header__logo {
+  width: 280px;
+  height: 100px;
+  background-color: wheat;
+}
+.l-header .l-header__nav {
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  line-height: 24px;
+}
+.l-header .l-header__nav .l-header__nav-list {
+  display: flex;
+  gap: 40px;
 }/*# sourceMappingURL=style.css.map */
