--- a/assets/scss/foundation/_base.scss
+++ b/assets/scss/foundation/_base.scss
@@ -1,3 +1,5 @@
+@use "color" as cl;
+
 *,
 *:before,
 *:after {
@@ -7,8 +9,11 @@
 body {
     font-size: 16px;
     line-height: 1.5;
-    font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
-    color: #333;
+    font-family: "Noto Sans JP", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;    
+    color: cl.$c-mainFont;
     margin: 0;
     padding: 0;
     position: relative;
