--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,8 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap");
-@font-face {
-  font-family: "Times New Roman";
-  src: "../font/TimesNewRoman.otf" format("opentype");
-}
 /*! destyle.css v4.0.1 | MIT License | https://github.com/nicolas-cusan/destyle.css */
 /* Reset box-model and set borders */
 /* ============================================ */
@@ -405,7 +400,10 @@ th {
 body {
   font-size: 16px;
   line-height: 1.5;
-  font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   color: #333;
   margin: 0;
   padding: 0;
