[new]スキルアイコンとタイトルコンポーネント

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,19 +23,11 @@
 // -----------------------------------------------------------------
 
 @import "component/button";
-@import "component/title";
+@import "component/mainTitle";
+@import "component/skillCard";
 
 // -----------------------------------------------------------------
 // Project
 // -----------------------------------------------------------------
 
-
-// -----------------------------------------------------------------
-// Utility
-// -----------------------------------------------------------------
-
-
-// ==========================================================================
-// Library
-// ==========================================================================
-
+@import "project/index";
