--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 .l-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    // position: fixed;
+    // left: 0;
+    // bottom: 0;
     width: 100%;
     padding: 20px;
 
