--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -444,9 +444,6 @@ button {
 }
 
 .l-footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
   width: 100%;
   padding: 20px;
 }
@@ -484,4 +481,34 @@ button {
 .l-header .l-header__nav .l-header__nav-list {
   display: flex;
   gap: 40px;
+}
+
+.l-main {
+  padding-top: 150px;
+  padding-left: 7%;
+  padding-bottom: 7%;
+}
+
+.c-mainTitle .c-mainTitle__text {
+  font-size: 36px;
+  line-height: 48px;
+  font-weight: 700;
+}
+
+.c-skillCard {
+  width: 140px;
+  padding: 20px;
+}
+.c-skillCard .c-skillCard__title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px;
+  text-align: center;
+}
+.c-skillCard .c-skillCard__img-wrap {
+  padding-top: 10px;
+}
+.c-skillCard .c-skillCard__img {
+  width: 100px;
+  height: 100px;
 }/*# sourceMappingURL=style.css.map */
