--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -25,6 +25,8 @@
 @import "component/button";
 @import "component/mainTitle";
 @import "component/skillCard";
+@import "component/socialIcon";
+@import "component/productCard";
 
 // -----------------------------------------------------------------
 // Project
