--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,6 +1,10 @@
 // bodyやmain周りのスタイリング
 .l-main {
-    padding-top: 150px;
+    padding-top: 100px;
+}
+
+.l-section {
+    margin-top: 120px;
     padding-left: 7%;
-    padding-bottom: 7%;
+    padding-right: 7%;
 }
