[new]お問い合わせフォームの実装とデザイン修正

--- a/assets/scss/foundation/_color.scss
+++ b/assets/scss/foundation/_color.scss
@@ -1,3 +1,5 @@
-$c-mainFont: #333;
-$c-mainBackground: #FFF;
+$c-mainFont: #333333;
+$c-mainBackground: #FFFFFF;
 $c-mainButton: #20b2aa;
+$c-attention: #dc143c;
+$c-gray: #CCCCCC;
