--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,14 +1,13 @@
+@use "../foundation/color" as cl;
+
 .l-footer {
-    // position: fixed;
-    // left: 0;
-    // bottom: 0;
     width: 100%;
     padding: 20px;
 
     .l-footer__inner {
         display: flex;
         justify-content: center;
-        border-top: 1px solid #333;
+        border-top: 1px solid cl.$c-mainFont;
         padding-top: 20px;
     }
 
