--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -33,3 +33,5 @@
 // -----------------------------------------------------------------
 
 @import "project/index";
+@import "project/form";
+@import "project/completed";
