--- a/assets/scss/foundation/_base.scss
+++ b/assets/scss/foundation/_base.scss
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 100px;
+}
+
 body {
     font-size: 16px;
     line-height: 1.5;
