--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,32 +1,38 @@
+@use "../foundation/color" as cl;
+
 .l-header {
     position: fixed;
     width: 100%;
-    background-color: white;
-    // border-bottom: 1px solid black;
+    background-color: rgba(255, 255, 255, 0.7);
     z-index: 1000;
 
     .l-header__inner {
         display: flex;
         justify-content: space-between;
-        padding-right: 24px;
-        padding-left: 24px;
+        padding-right: 4%;
+        padding-left: 4%;
     }
 
     .l-header__logo {
         width: 280px;
-        height: 100px;
-        background-color: wheat;
+        height: 80px;
+        background-color: cl.$c-gray;
     }
 
     .l-header__nav {
         display: flex;
         align-items: center;
-        font-size: 24px;
+        font-size: 20px;
+        font-weight: bold;
         line-height: 24px;
 
         .l-header__nav-list {
             display: flex;
             gap: 40px;
+
+            .l-header__nav-list-item {
+                cursor: pointer;
+            }
         }
     }
 }
