--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,4 +1,10 @@
 // bodyやmain周りのスタイリング
+.l-body {
+    background-image: url("/assets/img/images/bg.png");
+    background-size: cover;
+    background-position: center;
+}
+
 .l-main {
     padding-top: 100px;
 }
