--- a/assets/scss/component/_productCard.scss
+++ b/assets/scss/component/_productCard.scss
@@ -11,6 +11,12 @@
 
     .c-productCard__img {
         object-fit: cover;
+        aspect-ratio: 380 / 250;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .c-productCard__context {
