[new]ヘッダー画像の追加

--- a/assets/scss/project/_index.scss
+++ b/assets/scss/project/_index.scss
@@ -1,6 +1,17 @@
 .p-index {
+
     .p-index-header {
         width: 100%;
+
+        .p-index-header__img {
+            object-fit: cover;
+            width: 100%;
+
+            img {
+                width: 100%;
+                height: 250px;
+            }
+        }
     }
     .p-index-about {
 
