--- a/assets/scss/foundation/_mixin.scss
+++ b/assets/scss/foundation/_mixin.scss
@@ -6,6 +6,29 @@
     transform: translate(-50%, -50%);
 }
 
+// 下線が左から右に流れるホバーアニメーション
+@mixin hover-underline($color) {
+    display: inline-block;
+
+    &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: $color;
+        transform: scale(0, 1);
+        transform-origin: right top;
+        transition: transform 0.3s ease;
+    }
+
+    &:hover::after {
+        transform: scale(1, 1);
+        transform-origin: left top;
+    }
+}
+
 // ブレイクポイント（min-width）
 $mq-breakpoints: (
     'sm': 640px,
