--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -3,20 +3,22 @@
 .l-header {
     position: fixed;
     width: 100%;
+    height: 80px;
     background-color: rgba(255, 255, 255, 0.7);
     z-index: 1000;
 
     .l-header__inner {
         display: flex;
         justify-content: space-between;
-        padding-right: 4%;
-        padding-left: 4%;
+        align-items: center;
+        height: 100%;
+        padding-right: 5%;
+        padding-left: 5%;
     }
 
     .l-header__logo {
-        width: 280px;
-        height: 80px;
-        background-color: cl.$c-gray;
+        font-size: 32px;
+        font-weight: bold;
     }
 
     .l-header__nav {
@@ -32,6 +34,11 @@
 
             .l-header__nav-list-item {
                 cursor: pointer;
+
+                a {
+                    position: relative;
+                    @include hover-underline(cl.$c-gray);
+                }
             }
         }
     }
