--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -465,19 +465,21 @@ button {
 .l-header {
   position: fixed;
   width: 100%;
+  height: 80px;
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 1000;
 }
 .l-header .l-header__inner {
   display: flex;
   justify-content: space-between;
-  padding-right: 4%;
-  padding-left: 4%;
+  align-items: center;
+  height: 100%;
+  padding-right: 5%;
+  padding-left: 5%;
 }
 .l-header .l-header__logo {
-  width: 280px;
-  height: 80px;
-  background-color: #CCCCCC;
+  font-size: 32px;
+  font-weight: bold;
 }
 .l-header .l-header__nav {
   display: flex;
@@ -493,6 +495,26 @@ button {
 .l-header .l-header__nav .l-header__nav-list .l-header__nav-list-item {
   cursor: pointer;
 }
+.l-header .l-header__nav .l-header__nav-list .l-header__nav-list-item a {
+  position: relative;
+  display: inline-block;
+}
+.l-header .l-header__nav .l-header__nav-list .l-header__nav-list-item a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #CCCCCC;
+  transform: scale(0, 1);
+  transform-origin: right top;
+  transition: transform 0.3s ease;
+}
+.l-header .l-header__nav .l-header__nav-list .l-header__nav-list-item a:hover::after {
+  transform: scale(1, 1);
+  transform-origin: left top;
+}
 
 .l-body {
   background-image: url("/assets/img/images/bg.png");
@@ -501,11 +523,11 @@ button {
 }
 
 .l-main {
-  padding-top: 100px;
+  padding-top: 80px;
 }
 
 .l-section {
-  margin-top: 120px;
+  margin-top: 80px;
   padding-left: 7%;
   padding-right: 7%;
 }
@@ -576,6 +598,15 @@ button {
 
 .p-index .p-index-header {
   width: 100%;
+}
+.p-index .p-index-header .p-index-header__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+}
+.p-index .p-index-header .p-index-header__img img {
+  width: 100%;
+  height: 250px;
 }
 .p-index .p-index-about .p-index-about__profile {
   display: flex;
