[new]カラーの変更とロゴ設定

--- a/assets/scss/foundation/_color.scss
+++ b/assets/scss/foundation/_color.scss
@@ -1,5 +1,8 @@
-$c-mainFont: #333333;
+$c-mainFont: #000000;
 $c-mainBackground: #FFFFFF;
-$c-mainButton: #20b2aa;
+$c-mainButton: #40A2D8;
+$c-bg: #fffaf0;
 $c-attention: #dc143c;
 $c-gray: #CCCCCC;
+$c-darkBlue: #0B60B0;
+$c-yellow: #EFF396;
