--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -17,8 +17,13 @@
     }
 
     .l-header__logo {
-        font-size: 32px;
-        font-weight: bold;
+        aspect-ratio: 200 / 60;
+
+        img {
+            width: 230px;
+            height: 70px;
+            object-fit: cover;
+        }
     }
 
     .l-header__nav {
@@ -37,7 +42,7 @@
 
                 a {
                     position: relative;
-                    @include hover-underline(cl.$c-gray);
+                    @include hover-underline(cl.$c-darkBlue);
                 }
             }
         }
