[new]デザインの修正をもとにした初期ファイル設定と不要素材の削除

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,7 +5,7 @@
 // ==========================================================================
 
 @import "foundation/color";
-@import "foundation/variable";
+@import "foundation/font";
 @import "foundation/mixin";
 @import "foundation/reset";
 @import "foundation/base";
@@ -24,9 +24,7 @@
 
 @import "component/button";
 @import "component/mainTitle";
-@import "component/skillCard";
 @import "component/socialIcon";
-@import "component/productCard";
 
 // -----------------------------------------------------------------
 // Project
