--- a/assets/scss/foundation/_color.scss
+++ b/assets/scss/foundation/_color.scss
@@ -1,8 +1,8 @@
-$c-mainFont: #000000;
-$c-mainBackground: #FFFFFF;
-$c-mainButton: #40A2D8;
-$c-bg: #fffaf0;
+$c-mainFont: #333333;
+$c-subFont: #3E4550;
+$c-bg: #F9F9F9;
+$c-border: #D9D9D9;
+$c-form: #ECECEC;
+$c-blue: #487A96;
+$c-darkBlue: #3A72A7;
 $c-attention: #dc143c;
-$c-gray: #CCCCCC;
-$c-darkBlue: #0B60B0;
-$c-yellow: #EFF396;
