--- a/assets/scss/foundation/_base.scss
+++ b/assets/scss/foundation/_base.scss
@@ -1,4 +1,5 @@
 @use "color" as cl;
+@use "font" as fn;
 
 *,
 *:before,
@@ -14,7 +15,7 @@ html {
 body {
     font-size: 16px;
     line-height: 1.5;
-    font-family: "Noto Sans JP", sans-serif;
+    font-family: fn.$PT-sans;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;    
