--- a/assets/scss/foundation/_color.scss
+++ b/assets/scss/foundation/_color.scss
@@ -1,7 +1,8 @@
 $c-mainFont: #333333;
 $c-subFont: #3E4550;
+$c-copy: #4E4D4D;
 $c-bg: #F9F9F9;
-$c-border: #D9D9D9;
+$c-gray: #D9D9D9;
 $c-form: #ECECEC;
 $c-blue: #487A96;
 $c-darkBlue: #3A72A7;
