--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,2 +1,43 @@
 @use "../foundation/color" as cl;
 
+.l-footer {
+    font-size: 15px;
+    background-color: cl.$c-gray;
+    width: 100%;
+    padding: 20px 40px;
+
+    .l-footer__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .l-footer__logo {
+        display: flex;
+        gap: 8px;
+        align-items: center;
+        height: 70px;
+
+        img {
+            width: 60px;
+            height: 60px;
+        }
+    }
+
+    .l-footer__nav {
+        display: flex;
+        align-items: center;
+
+        .l-footer__nav-list {
+            display: flex;
+            align-items: center;
+            gap: 70px;
+        }
+    }
+
+    .l-footer__copy {
+        font-size: 12px;
+        color: cl.$c-copy;
+        text-align: center;
+        margin-top: 80px;
+    }
+}
