--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -405,7 +405,7 @@ html {
 body {
   font-size: 16px;
   line-height: 1.5;
-  font-family: "Noto Sans JP", sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -446,6 +446,70 @@ button {
   border: none;
   color: inherit;
   cursor: pointer;
+}
+
+.l-footer {
+  font-size: 15px;
+  background-color: #D9D9D9;
+  width: 100%;
+  padding: 20px 40px;
+}
+.l-footer .l-footer__inner {
+  display: flex;
+  justify-content: space-between;
+}
+.l-footer .l-footer__logo {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  height: 70px;
+}
+.l-footer .l-footer__logo img {
+  width: 60px;
+  height: 60px;
+}
+.l-footer .l-footer__nav {
+  display: flex;
+  align-items: center;
+}
+.l-footer .l-footer__nav .l-footer__nav-list {
+  display: flex;
+  align-items: center;
+  gap: 70px;
+}
+.l-footer .l-footer__copy {
+  font-size: 12px;
+  color: #4E4D4D;
+  text-align: center;
+  margin-top: 80px;
+}
+
+.l-header {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 80px;
+  padding: 0 40px;
+}
+.l-header .l-header__logo img {
+  width: 60px;
+  height: 60px;
+}
+.l-header .l-header__nav {
+  display: flex;
+  gap: 60px;
+}
+.l-header .l-header__nav .l-header__nav-list {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+.l-header .l-header__nav .l-header__nav-icons {
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .l-body {
