--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,8 +23,11 @@
 // -----------------------------------------------------------------
 
 @import "component/button";
-@import "component/mainTitle";
+@import "component/title";
+@import "component/showTitle";
+@import "component/productCard";
 @import "component/socialIcon";
+@import "component/scrollup";
 
 // -----------------------------------------------------------------
 // Project
