--- a/assets/scss/project/_form.scss
+++ b/assets/scss/project/_form.scss
@@ -7,6 +7,7 @@
     padding: 36px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-top: 36px;
+    margin-bottom: 80px;
 
     input[type="email"],
     textarea {
