--- a/assets/scss/component/_productCard.scss
+++ b/assets/scss/component/_productCard.scss
@@ -1,11 +1,16 @@
 @use "../foundation/color" as cl;
 
 .c-productCard {
+    width: 100%;
 
     .c-productCard__img {
+        display: block;
+        width: 100%;
         object-fit: cover;
 
         img {
+            width: 100%;
+            height: auto;
             aspect-ratio: 340 / 240;
         }
     }
