--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -522,10 +522,6 @@ button {
   padding-right: 7%;
 }
 
-.l-section {
-  margin-top: 80px;
-}
-
 .c-button {
   font-size: 24px;
   font-weight: normal;
@@ -537,13 +533,13 @@ button {
   position: absolute;
   bottom: 5px;
   left: 0;
-  width: calc(100% + 30px);
+  width: calc(100% + 20px);
   height: 1px;
   background-color: #555555;
   transition: width 0.5s ease;
 }
 .c-button:hover::after {
-  width: calc(100% + 50px);
+  width: calc(100% + 40px);
 }
 
 .c-title {
@@ -560,11 +556,18 @@ button {
   padding-bottom: 12px;
 }
 
+.c-productCard {
+  width: 100%;
+}
 .c-productCard .c-productCard__img {
+  display: block;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 .c-productCard .c-productCard__img img {
+  width: 100%;
+  height: auto;
   aspect-ratio: 340/240;
 }
 .c-productCard .c-productCard__title {
@@ -615,36 +618,116 @@ button {
   background: #333333;
 }
 
-.p-form {
-  width: 100%;
-  border-radius: 10px;
-  margin: 0 auto;
-  padding: 36px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-top: 36px;
-  margin-bottom: 80px;
+.c-typing .c-typing-effect {
+  width: 17ch;
+  animation: typing 3s steps(23), effect 0.5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 1px solid;
+  font-family: monospace;
+  font-size: 1em;
 }
-.p-form input[type=email],
-.p-form textarea {
-  width: 100%;
-  padding: 8px;
-  margin-top: 5px;
-  border-radius: 4px;
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
 }
-.p-form .p-form__name {
-  padding: 8px;
-  margin-top: 5px;
-  border-radius: 4px;
+@keyframes effect {
+  50% {
+    border-color: transparent;
+  }
 }
-.p-form .p-form__button {
-  display: flex;
-  justify-content: center;
-  margin-top: 24px;
+.p-index-header {
+  margin-top: 80px;
 }
-.p-form p {
+.p-index-header .p-index-header__title {
+  font-size: 52px;
+  font-weight: bold;
+  color: #3E4550;
+}
+.p-index-header .p-index-header__sub-title {
+  font-size: 18px;
+  font-weight: bold;
   margin-top: 12px;
 }
-.p-form span {
+.p-index-header .p-index-header__img {
+  display: flex;
+  justify-content: end;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.p-index-header .p-index-header__img img {
+  width: 72%;
+  aspect-ratio: 875/400;
+}
+
+.p-index-about {
+  margin-top: 100px;
+}
+.p-index-about .p-index-about__title {
+  font-size: 48px;
+  font-style: italic;
+  margin-top: 16px;
+}
+.p-index-about .p-index-about__text-wrap {
+  display: flex;
+  align-items: end;
+  gap: 60px;
+}
+.p-index-about .p-index-about__text {
+  font-size: 16px;
+  line-height: 28.8px;
+  margin-top: 12px;
+}
+
+.p-index-product {
+  margin-top: 140px;
+}
+.p-index-product .p-index-product__title {
+  justify-content: flex-end;
+}
+.p-index-product .p-index-product__list {
+  margin-top: 54px;
+}
+.p-index-product .p-index-product__list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+  margin-bottom: 20px;
+}
+
+.p-index-contact {
+  margin: 100px 0;
+}
+.p-index-contact .p-index-contact__form input[type=email],
+.p-index-contact .p-index-contact__form textarea {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  border-radius: 4px;
+  background-color: #ECECEC;
+}
+.p-index-contact .p-index-contact__form .p-form__name {
+  padding: 8px;
+  margin-top: 5px;
+  border-radius: 4px;
+  background-color: #ECECEC;
+}
+.p-index-contact .p-index-contact__form span {
+  font-size: 12px;
   color: #dc143c;
-  margin-right: 2px;
+  margin-left: 4px;
+}
+.p-index-contact .p-index-contact__form .p-index-contact__form-wrap {
+  display: flex;
+  align-items: end;
+  gap: 60px;
+  margin-top: 24px;
+}
+.p-index-contact .p-index-contact__form .p-index-contact__form-list {
+  width: 60%;
+}
+.p-index-contact .p-index-contact__form .p-index-contact__form-list .p-index-contact__form-item {
+  margin-top: 20px;
 }/*# sourceMappingURL=style.css.map */
