--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -28,11 +28,11 @@
 @import "component/productCard";
 @import "component/socialIcon";
 @import "component/scrollup";
+@import "component/typing";
 
 // -----------------------------------------------------------------
 // Project
 // -----------------------------------------------------------------
 
 @import "project/index";
-@import "project/form";
 @import "project/completed";
