--- a/assets/scss/component/_productCard.scss
+++ b/assets/scss/component/_productCard.scss
@@ -6,12 +6,29 @@
     .c-productCard__img {
         display: block;
         width: 100%;
-        object-fit: cover;
+        position: relative;
 
         img {
             width: 100%;
             height: auto;
+            object-fit: contain;
             aspect-ratio: 340 / 240;
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: cl.$c-white;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        &:hover::after {
+            opacity: 0.3;
         }
     }
 
