--- a/assets/scss/component/_showTitle.scss
+++ b/assets/scss/component/_showTitle.scss
@@ -1,1 +1,22 @@
 @use "../foundation/color" as cl;
+
+.c-showTitle {
+    font-size: 32px;
+    font-weight: bold;
+    position: relative;
+    display: inline-block;
+    padding-bottom: 4px;
+
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 12px;
+        left: 0;
+        width: 100%;
+        height: 15px;
+        background-color: cl.$c-underLine;
+        opacity: 0.5;
+        transform: translateY(50%);
+        z-index: -1;
+    }
+}
