--- a/assets/scss/foundation/_color.scss
+++ b/assets/scss/foundation/_color.scss
@@ -6,6 +6,8 @@ $c-skillFont: #6D6D6D;
 $c-bg: #F9F9F9;
 $c-gray: #D9D9D9;
 $c-form: #ECECEC;
+$c-underLine: #40A2D8;
+$c-white: #FFFFFF;
 $c-blue: #487A96;
 $c-darkBlue: #3A72A7;
 $c-attention: #dc143c;
