--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -556,19 +556,54 @@ button {
   padding-bottom: 12px;
 }
 
+.c-showTitle {
+  font-size: 32px;
+  font-weight: bold;
+  position: relative;
+  display: inline-block;
+  padding-bottom: 4px;
+}
+.c-showTitle::after {
+  content: "";
+  position: absolute;
+  bottom: 12px;
+  left: 0;
+  width: 100%;
+  height: 15px;
+  background-color: #40A2D8;
+  opacity: 0.5;
+  transform: translateY(50%);
+  z-index: -1;
+}
+
 .c-productCard {
   width: 100%;
 }
 .c-productCard .c-productCard__img {
   display: block;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  position: relative;
 }
 .c-productCard .c-productCard__img img {
   width: 100%;
   height: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
   aspect-ratio: 340/240;
+}
+.c-productCard .c-productCard__img::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FFFFFF;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.c-productCard .c-productCard__img:hover::after {
+  opacity: 0.3;
 }
 .c-productCard .c-productCard__title {
   font-size: 20px;
@@ -623,7 +658,7 @@ button {
   animation: typing 3s steps(23), effect 0.5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
-  border-right: 1px solid;
+  border-right: 1px solid #333333;
   font-family: monospace;
   font-size: 1em;
 }
