--- a/assets/scss/component/_showTitle.scss
+++ b/assets/scss/component/_showTitle.scss
@@ -5,7 +5,8 @@
     font-weight: bold;
     position: relative;
     display: inline-block;
-    padding-bottom: 4px;
+    padding-bottom: 8px;
+    margin-bottom: 12px;
 
     &::after {
         content: '';
@@ -13,7 +14,7 @@
         bottom: 12px;
         left: 0;
         width: 100%;
-        height: 15px;
+        height: 10px;
         background-color: cl.$c-underLine;
         opacity: 0.5;
         transform: translateY(50%);
