--- a/assets/scss/foundation/_color.scss
+++ b/assets/scss/foundation/_color.scss
@@ -7,6 +7,7 @@ $c-bg: #F9F9F9;
 $c-gray: #D9D9D9;
 $c-form: #ECECEC;
 $c-underLine: #40A2D8;
+$c-link: #0B60B0;
 $c-white: #FFFFFF;
 $c-blue: #487A96;
 $c-darkBlue: #3A72A7;
