[new]PC版スタイリングとフォームバリデーションの実装

--- a/assets/scss/foundation/_base.scss
+++ b/assets/scss/foundation/_base.scss
@@ -58,3 +58,9 @@ button {
     color: inherit;
     cursor: pointer;
 }
+
+.validate-feedback {
+    font-size: 14px;
+    color: cl.$c-attention;
+    margin-top: 12px;
+}
