--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -448,6 +448,12 @@ button {
   cursor: pointer;
 }
 
+.validate-feedback {
+  font-size: 14px;
+  color: #dc143c;
+  margin-top: 12px;
+}
+
 .l-footer {
   font-size: 15px;
   background-color: #D9D9D9;
@@ -789,6 +795,105 @@ button {
   display: flex;
   justify-content: flex-end;
   margin-top: 12px;
+}
+
+.p-about {
+  width: 92%;
+  margin: auto;
+  padding: 140px 0;
+}
+.p-about .p-about__about .p-about__about-context {
+  width: 58%;
+  font-size: 18px;
+  line-height: 32.8px;
+  margin-top: 24px;
+  margin-left: 24px;
+}
+.p-about .p-about__about .p-about__about-context .p-about__about-context-text {
+  margin-top: 12px;
+}
+.p-about .p-about__about .p-about__about-img {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 56px;
+}
+.p-about .p-about__skill {
+  margin-top: 100px;
+}
+.p-about .p-about__skill .p-about-skill-title {
+  display: flex;
+  justify-content: flex-end;
+}
+.p-about .p-about__skill .p-about__skill-inner {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  margin-top: 80px;
+}
+.p-about .p-about__skill .p-about__skill-img {
+  display: block;
+  width: 54%;
+  position: relative;
+}
+.p-about .p-about__skill .p-about__skill-img img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
+  aspect-ratio: 540/343;
+}
+.p-about .p-about__skill .p-about__skill-context {
+  width: 46%;
+  font-size: 18px;
+}
+.p-about .p-about__skill .p-about__skill-context .p-about__skill-context-list .p-about__skill-context-list-item {
+  margin-top: 16px;
+}
+.p-about .p-about__career {
+  margin-top: 80px;
+}
+.p-about .p-about__career .p-about__career-timeline {
+  position: relative;
+  padding-left: 60px;
+  margin-top: 24px;
+}
+.p-about .p-about__career .p-about__career-timeline::before {
+  content: "";
+  position: absolute;
+  left: 142px;
+  top: 0;
+  bottom: 0;
+  width: 2px;
+  background-color: #487A96;
+  opacity: 0.8;
+}
+.p-about .p-about__career .p-about__career-timeline .p-about__career-timeline-list .p-about__career-timeline-list-item {
+  position: relative;
+  margin-top: 48px;
+  display: flex;
+  align-items: center;
+}
+.p-about .p-about__career .p-about__career-timeline .p-about__career-timeline-list .p-about__career-timeline-list-item .p-about__career-timeline-list-item-date {
+  display: flex;
+  justify-content: center;
+  width: 100px;
+  font-weight: bold;
+  position: relative;
+  padding-right: 20px;
+}
+.p-about .p-about__career .p-about__career-timeline .p-about__career-timeline-list .p-about__career-timeline-list-item .p-about__career-timeline-list-item-date::before {
+  content: "";
+  position: absolute;
+  left: 78px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 10px;
+  height: 10px;
+  background-color: #3A72A7;
+  border-radius: 50%;
+}
+.p-about .p-about__career .p-about__career-timeline .p-about__career-timeline-list .p-about__career-timeline-list-item .p-about__timeline-list-item-text {
+  flex: 1;
 }
 
 .p-products {
