--- a/assets/scss/foundation/_color.scss
+++ b/assets/scss/foundation/_color.scss
@@ -3,6 +3,7 @@ $c-subFont: #3E4550;
 $c-copy: #4E4D4D;
 $c-button: #555555;
 $c-skillFont: #6D6D6D;
+$c-nav-bg: #D9D9D9;
 $c-bg: #F9F9F9;
 $c-gray: #D9D9D9;
 $c-form: #ECECEC;
