--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,4 +1,5 @@
 @use "../foundation/color" as cl;
+@use "../foundation/mixin" as bp;
 
 .l-header {
     position: fixed;
@@ -31,6 +32,21 @@
             display: flex;
             align-items: center;
             gap: 20px;
+        }
+    }
+}
+
+@include mq(lg, max) {
+    .l-header {
+        padding: 20px 24px;
+
+        .l-header__logo {
+            width: 120px;
+            height: 13px;
+        }
+
+        .l-header__nav {
+            display: none;
         }
     }
 }
