--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -17,6 +17,7 @@
 @import "layout/footer";
 @import "layout/header";
 @import "layout/main";
+@import "layout/hamburger";
 
 // -----------------------------------------------------------------
 // Component
