--- a/assets/scss/component/_productCard.scss
+++ b/assets/scss/component/_productCard.scss
@@ -1,4 +1,5 @@
 @use "../foundation/color" as cl;
+@use "../foundation/mixin" as bp;
 
 .c-productCard {
     width: 100%;
@@ -12,7 +13,6 @@
             width: 100%;
             height: auto;
             object-fit: contain;
-            aspect-ratio: 340 / 240;
         }
 
         &::after {
@@ -40,5 +40,25 @@
     .c-productCard__skill {
         font-size: 14px;
         color: cl.$c-skillFont;
+    }
+}
+
+@include bp.mq(lg, max) {
+    .c-productCard {
+        .c-productCard__title {
+            font-size: 18px;
+        }
+    }
+}
+
+@include bp.mq(sm, max) {
+    .c-productCard {
+        .c-productCard__title {
+            font-size: 14px;
+        }
+
+        .c-productCard__skill {
+            font-size: 10px;
+        }
     }
 }
