--- a/assets/scss/component/_scrollup.scss
+++ b/assets/scss/component/_scrollup.scss
@@ -1,4 +1,5 @@
 @use "../foundation/color" as cl;
+@use "../foundation/mixin" as bp;
 
 .c-scrollup {
     display: block;
@@ -36,5 +37,27 @@
         width: 1px;
         height: 60px;
         background: cl.$c-mainFont;
+    }
+}
+
+@include bp.mq(sm, max) {
+    .c-scrollup {
+        right: 2%;
+
+        span {
+            left: -26px;
+            bottom: 14px;
+            font-size: 0.6rem;
+        }
+
+        &::before {
+            right: 6px;
+            bottom: 30px;
+        }
+
+        &::after {
+            right: 10px;
+            height: 50px;
+        }
     }
 }
