--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,4 +1,5 @@
 @use "../foundation/color" as cl;
+@use "../foundation/mixin" as bp;
 
 .l-footer {
     font-size: 15px;
@@ -32,6 +33,12 @@
             align-items: center;
             gap: 70px;
         }
+
+        .l-footer__nav-icons {
+            display: none;
+            align-items: center;
+            gap: 20px;
+        }
     }
 
     .l-footer__copy {
@@ -39,5 +46,55 @@
         color: cl.$c-copy;
         text-align: center;
         margin-top: 80px;
+    }
+}
+
+@include bp.mq(lg, max) {
+    .l-footer {
+
+        .l-footer__nav {
+            .l-footer__nav-list {
+                display: none;
+            }
+            
+            .l-footer__nav-icons {
+                display: flex;
+            }
+        }
+
+        .l-footer__logo {
+            gap: 2px;
+
+            img {
+                width: 40px;
+                height: 40px;
+            }
+
+            p {
+                font-size: 12px;
+            }
+        }
+    }
+}
+
+@include mq(sm, max) {
+    .l-footer {
+        padding: 14px 18px;
+
+        .l-footer__logo {
+            gap: 0px;
+
+            img {
+                width: 35px;
+                height: 35px;
+            }
+
+            p {
+                font-size: 10px;
+            }
+        }
+        .l-footer__copy {
+            font-size: 8px;
+        }
     }
 }
