--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,4 +1,5 @@
 @use "../foundation/color" as cl;
+@use "../foundation/mixin" as bp;
 
 .l-body {
     background-color: cl.$c-bg;
@@ -15,4 +16,16 @@
     display: grid;
     grid-template-rows: 1fr auto;
     min-height: 100vh;
+}
+
+@include bp.mq(sm, max) {
+    .l-main {
+        padding-left: 0;
+        padding-right: 0;
+        padding-top: 32px;
+    }
+
+    .l-section {
+        padding: 0 5%;
+    }
 }
