[new]その他ページのSP版の実装

--- a/assets/scss/component/_showTitle.scss
+++ b/assets/scss/component/_showTitle.scss
@@ -1,4 +1,5 @@
 @use "../foundation/color" as cl;
+@use "../foundation/mixin" as bp;
 
 .c-showTitle {
     font-size: 32px;
@@ -19,5 +20,15 @@
         opacity: 0.5;
         transform: translateY(50%);
         z-index: -1;
+    }
+}
+
+@include bp.mq(sm, max) {
+    .c-showTitle {
+        font-size: 20px;
+
+        &::after {
+            height: 8px;
+        }
     }
 }
