--- a/assets/scss/project/_products.scss
+++ b/assets/scss/project/_products.scss
@@ -1,4 +1,5 @@
 @use "../foundation/color" as cl;
+@use "../foundation/mixin" as bp;
 
 .p-products {
     width: 82%;
@@ -58,5 +59,38 @@
         justify-content: flex-end;
         margin-top: 80px;
         padding-right: 7%;
+    }
+}
+
+@include bp.mq(sm, max) {
+    .p-products {
+        width: 92%;
+        padding-top: 80px;
+        padding-bottom: 56px;
+
+        .p-products__header {
+            .p-products__header-title {
+                font-size: 20px;
+            }
+
+            .p-products__header-skill {
+                font-size: 16px;
+            }
+        }
+
+        .p-products__context {
+            font-size: 14px;
+            line-height: 32.8px;
+        }
+
+        .p-products__detail {
+            font-size: 12px;
+            line-height: 28.8px;
+        }
+
+        .p-products__back {
+            padding-right: 8%;
+            margin-top: 20px;
+        }
     }
 }
