--- a/assets/scss/component/_productCard.scss
+++ b/assets/scss/component/_productCard.scss
@@ -8,11 +8,12 @@
         display: block;
         width: 100%;
         position: relative;
+        aspect-ratio: 340 / 240;
 
         img {
             width: 100%;
-            height: auto;
-            object-fit: contain;
+            height: 100%;
+            object-fit: cover;
         }
 
         &::after {
