--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -766,12 +766,13 @@ button {
   display: block;
   width: 100%;
   position: relative;
+  aspect-ratio: 340/240;
 }
 .c-productCard .c-productCard__img img {
   width: 100%;
-  height: auto;
-  -o-object-fit: contain;
-     object-fit: contain;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .c-productCard .c-productCard__img::after {
   content: "";
