[WIP]SP実機でのアニメーションの不具合

--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -872,6 +872,7 @@ button {
   border-right: 1px solid #333333;
   font-family: monospace;
   font-size: 1em;
+  transform: translateZ(0);
 }
 
 @keyframes typing {
