--- a/assets/scss/component/_typing.scss
+++ b/assets/scss/component/_typing.scss
@@ -1,4 +1,5 @@
 @use "../foundation/color" as cl;
+@use "../foundation/mixin" as bp;
 
 .c-typing {
 
@@ -25,3 +26,5 @@
         border-color: transparent
     }
 }
+
+@include bp.mq(sm, max) {}
