--- a/assets/scss/component/_typing.scss
+++ b/assets/scss/component/_typing.scss
@@ -27,4 +27,10 @@
     }
 }
 
-@include bp.mq(sm, max) {}
+@include bp.mq(sm, max) {
+    .c-typing {
+        .c-typing-effect {
+            width: 23ch;
+        }
+    }
+}
