--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -753,7 +753,7 @@ button {
 
 @media screen and (max-width: 639px) {
   .c-showTitle {
-    font-size: 20px;
+    font-size: 24px;
   }
   .c-showTitle::after {
     height: 8px;
@@ -872,7 +872,6 @@ button {
   border-right: 1px solid #333333;
   font-family: monospace;
   font-size: 1em;
-  transform: translateZ(0);
 }
 
 @keyframes typing {
@@ -883,6 +882,11 @@ button {
 @keyframes effect {
   50% {
     border-color: transparent;
+  }
+}
+@media screen and (max-width: 639px) {
+  .c-typing .c-typing-effect {
+    width: 23ch;
   }
 }
 .p-index-header {
@@ -1242,7 +1246,7 @@ button {
     left: 81px;
   }
   .p-about .p-about__career .p-about__career-timeline .p-about__career-timeline-list .p-about__career-timeline-list-item .p-about__career-timeline-list-item-date {
-    font-size: 12px;
+    font-size: 14px;
     padding-right: 40px;
   }
   .p-about .p-about__career .p-about__career-timeline .p-about__career-timeline-list .p-about__career-timeline-list-item .p-about__career-timeline-list-item-date::before {
@@ -1250,7 +1254,7 @@ button {
     height: 8px;
   }
   .p-about .p-about__career .p-about__career-timeline .p-about__career-timeline-list .p-about__career-timeline-list-item .p-about__career-timeline-list-item-text {
-    font-size: 10px;
+    font-size: 14px;
   }
 }
 .p-products {
@@ -1311,17 +1315,17 @@ button {
     padding-bottom: 56px;
   }
   .p-products .p-products__header .p-products__header-title {
-    font-size: 20px;
+    font-size: 26px;
   }
   .p-products .p-products__header .p-products__header-skill {
-    font-size: 16px;
+    font-size: 18px;
   }
   .p-products .p-products__context {
-    font-size: 14px;
+    font-size: 18px;
     line-height: 32.8px;
   }
   .p-products .p-products__detail {
-    font-size: 12px;
+    font-size: 16px;
     line-height: 28.8px;
   }
   .p-products .p-products__back {
